refactor(srm): 重构采购到货单相关代码
- 新增 SrmPurchaseInBO 和 SrmPurchaseInItemBO 类用于封装采购到货单和到货项数据
- 修改 SrmPurchaseInController 中的接口返回类型为使用新的 BO 类
- 重构 SrmPurchaseInService 接口，增加新的查询方法
- 实现 SrmPurchaseInServiceImpl 中的 BO 查询逻辑
- 更新 SrmPurchaseInItemMapper 中的查询方法，支持关联查询